--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "express": "^4.21.1"
   }
 }
